--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,6 @@ requests==2.32.0
 psycopg2-binary==2.9.1
 scikit-learn==1.6.0
 pydantic-settings==2.6.1
+python-jose==3.3.0
+passlib[bcrypt]==1.7.4
+python-dotenv
