--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,5 @@ pydantic-settings==2.6.1
 python-jose==3.3.0
 passlib[bcrypt]==1.7.4
 python-dotenv
-alembic==1.14.0
-seaboarn==0.13.2
-
+alembic
+seaborn==0.13
