--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ python-multipart==0.0.19
 pydantic==2.10.3
 requests==2.32.0
 psycopg2-binary==2.9.1
+PyPI==2.0.2
 scikit-learn==1.6.0
 pydantic-settings==2.6.1
 python-jose==3.3.0
