--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,23 @@
 fastapi==0.115.0
 uvicorn==0.32.0
 sqlalchemy==2.0.36
-pandas==2.2.3
-matplotlib==3.10.0
-numpy==2.2.0
+pandas>=2.2.3
+matplotlib>=3.10.0
+numpy>=2.2.0
 python-multipart==0.0.19
 pydantic==2.10.3
 requests==2.32.0
 psycopg2-binary==2.9.1
 scikit-learn==1.6.0
-seaborn==0.13.2
+seaborn>=0.13.2
 pydantic-settings==2.6.1
 python-jose==3.3.0
 passlib[bcrypt]==1.7.4
 python-dotenv
 alembic==1.14.0
 reportlab==4.2.5
+# Imbalanced Data Handling
+imbalanced-learn>=0.10.0
+
+# Natural Language Processing
+nltk>=3.6.0
